--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,8 @@
                                 <rule>
                                     <limits>
                                         <limit>
-                                            <counter>LINE</counter>
-                                            <value>LINE</value>
+                                            <counter>BRANCH</counter>
+                                            <value>COVEREDRATIO</value>
                                             <minimum>100%</minimum>
                                         </limit>
                                     </limits>
